--- a/src/main/resources/templates/ricerca/ricercaEvento.html
+++ b/src/main/resources/templates/ricerca/ricercaEvento.html
@@ -589,6 +589,29 @@
 										</div>
 									</div>
 								</div>
+								
+								<!-- VERSIONE -->
+								<div class="item form-group">
+									<label class="control-label col-md-3 col-sm-3 col-xs-11">
+										<h2 th:text="#{label.versione_evento}"></h2>
+									</label>
+								</div>
+
+								<div class="item form-group">
+									<label class="control-label col-md-3 col-sm-3 col-xs-11" for="versione"></label>
+									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="versione">
+										<div class="checkbox">
+											<label>
+												<input type="radio" class="flat versione" th:field="${ricercaEventoWrapper.versione}" th:value="1"/>
+												<span th:text="#{label.uno}"></span>
+											</label>
+											<label>
+												<input type="radio" class="flat versione" th:field="${ricercaEventoWrapper.versione}" th:value="2"/>
+												<span th:text="#{label.due}"></span>
+											</label>
+										</div>
+									</div>
+								</div>
 
 							<input id="submitButton" type="submit" style="display: none;" />
 
