--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -334,7 +334,8 @@ function loadScript(url, callback){
 												<i class="fa table-icon fa-question grey" th:title="#{label.non_specificato}"></i>
 											</div>
 										</td>
-										<td th:text="${@eventoServiceController.versioneEvento(evento).numeroVersione}"></td>
+										<!-- td th:text="${@eventoServiceController.versioneEvento(evento).numeroVersione}"></td>-->
+										<td th:text="${evento.versione != null ? evento.versione.numeroVersione : ''}"></td>
 										<td class="text-full-length" th:if="${#authentication.principal.account.isProvider() or #authentication.principal.account.isSegreteria()}">
 											<a class="btn btn-primary min-icon-width" th:if="${evento.canEdit() or #authentication.principal.isSegreteria()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/edit|}" th:title="#{label.modifica}"><i class="fa fa-pencil"></i></a>
 											<button th:if="${#authentication.principal.account.isSegreteria() and evento.canSegreteriaShiftData()}" type="button" class="btn btn-primary min-icon-width" th:onclick="|openModalScadenze(${evento.id}, '${evento.dataScadenzaPagamento}', '${evento.dataScadenzaInvioRendicontazione}')|" th:title="#{label.abilita}"><i class="fa fa-unlock-alt"> </i></button>
@@ -482,7 +483,7 @@ function loadScript(url, callback){
 		                    },
 							"aoColumnDefs": [
 							    { "sClass": "wordwrap", "aTargets": [ titolo ] },
-							    { "bSortable": false, "aTargets": [ 0 ] },
+							    /*{ "bSortable": false, "aTargets": [ 0 ] },*/
 							    { "bSortable": false, "aTargets": [ -1 ], "sClass": "control", },
 							    {"aTargets": colonne, "width": "1px"},
 			                    {"aTargets": [confermati], "sClass": "center"},
