--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -612,7 +612,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 				<!-- modale conferma variazioni dati e documenti -->
 				<div class="modal fade" id="confermaVariazioniDatiEDocumenti"
 					data-model-index="1" role="dialog">
@@ -650,7 +650,8 @@
 									<li><a th:if="${accreditamentoWrapper.canValutaDomanda and !(accreditamentoWrapper.accreditamento.isValutazioneSegreteriaVariazioneDati() or accreditamentoWrapper.accreditamento.isValutazioneCrecmVariazioneDati())}" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canValutaDomanda and (accreditamentoWrapper.accreditamento.isValutazioneSegreteriaVariazioneDati() or accreditamentoWrapper.accreditamento.isValutazioneCrecmVariazioneDati())}" th:text="#{label.valuta_variazione_dati}" onclick="switchMode('validate')"></a></li>
 									<li class="divider actions" th:if="${accreditamentoWrapper.canVariazioneDati or accreditamentoWrapper.canValutaVariazioneDati}"></li>
-									<li> <a th:if="${accreditamentoWrapper.canVariazioneDati}" th:href="#{#}" th:text="#{label.variazione_dati}" data-toggle="modal" data-target="#confermaVariazioniDatiEDocumenti"></a></li>
+									<li> <a th:if="${accreditamentoWrapper.canVariazioneDati and (accreditamentoWrapper.accreditamento.getStatoVariazioneDati() == null or accreditamentoWrapper.accreditamento.getStatoVariazioneDati() == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).CONCLUSO)}" th:href="#{#}" th:text="#{label.variazione_dati}" data-toggle="modal" data-target="#confermaVariazioniDatiEDocumenti"></a></li>
+									<li> <a th:if="${accreditamentoWrapper.canVariazioneDati and (accreditamentoWrapper.accreditamento.getStatoVariazioneDati() != null and accreditamentoWrapper.accreditamento.getStatoVariazioneDati() != T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).CONCLUSO)}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/variazioneDati|}" th:text="#{label.variazione_dati}"></a></li>
 									<li class="divider actions" th:if="${accreditamentoWrapper.canEnableField or accreditamentoWrapper.canPrendiInCarica or accreditamentoWrapper.canPresaVisione or accreditamentoWrapper.canAssegnaNuovoGruppo or accreditamentoWrapper.canInviaRichiestaIntegrazioneInAttesaDiFirma or accreditamentoWrapper.canInviaRichiestaPreavvisoRigettoInAttesaDiFirma or accreditamentoWrapper.canAccreditatoInAttesaDiFirma or accreditamentoWrapper.canDiniegoInAttesaDiFirma}"></li>
 									<li><a th:if="${accreditamentoWrapper.canEnableField}" th:text="#{label.abilita_id_editabili}" onclick="switchMode('enableField')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canPrendiInCarica}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/takeCharge|}" th:text="#{label.prendi_in_carica}"></a></li>
