Ricerca per archiviato solo per SEGRETERIA

--- a/src/main/resources/templates/ricerca/ricercaEvento.html
+++ b/src/main/resources/templates/ricerca/ricercaEvento.html
@@ -619,31 +619,33 @@
 
 								<div class="divider-dashed"></div>
 
-								<!-- ARCHIVIATO -->
-								<div class="item form-group">
-									<label class="control-label col-md-3 col-sm-3 col-xs-11">
-										<h2 th:text="#{label.eventi_archiviati}">Evento archiviato</h2>
-									</label>
+								<th:block th:if="${ricercaEventoWrapper.providerId == null}">
 
-									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="archivatoPrimaInfanzia">
-										<!-- PRIMA INFANZIA -->
-										<div class="checkbox">
-											<label>
-												<input type="checkbox" class="flat archivatoPrimaInfanzia" th:field="${ricercaEventoWrapper.archivatoPrimaInfanzia}"/>
-												<span th:text="#{label.con_alimentazione_prima_infanzia}"></span>
-											</label>
-										</div>
+									<!-- ARCHIVIATO -->
+									<div class="item form-group">
+										<label class="control-label col-md-3 col-sm-3 col-xs-11">
+											<h2 th:text="#{label.eventi_archiviati}">Evento archiviato</h2>
+										</label>
 
-										<!-- MEDICINE NON CONVENZIONALI -->
-										<div class="checkbox">
-											<label>
-												<input type="checkbox" class="flat archiviatoMedicinali" th:field="${ricercaEventoWrapper.archiviatoMedicinali}"/>
-												<span th:text="#{label.con_medicine_non_convenzionali}"></span>
-											</label>
+										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="archivatoPrimaInfanzia">
+											<!-- PRIMA INFANZIA -->
+											<div class="checkbox">
+												<label>
+													<input type="checkbox" class="flat archivatoPrimaInfanzia" th:field="${ricercaEventoWrapper.archivatoPrimaInfanzia}"/>
+													<span th:text="#{label.con_alimentazione_prima_infanzia}"></span>
+												</label>
+											</div>
+
+											<!-- MEDICINE NON CONVENZIONALI -->
+											<div class="checkbox">
+												<label>
+													<input type="checkbox" class="flat archiviatoMedicinali" th:field="${ricercaEventoWrapper.archiviatoMedicinali}"/>
+													<span th:text="#{label.con_medicine_non_convenzionali}"></span>
+												</label>
+											</div>
 										</div>
 									</div>
-
-								</div>
+								</th:block>
 
 							<input id="submitButton" type="submit" style="display: none;" />
 
