--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -2075,10 +2075,10 @@
 										<!-- <td th:text="${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.programma[__${status2.index}__].oreAttivita}"></td> -->
 										<td th:text="${T(it.tredi.ecm.utils.Utils).formatOrario(eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap[__${data.key}__].programma.programma[__${status2.index}__].oreAttivita)}"></td>
 										<td>
-											<a th:unless="${isEventoIniziato or ((isEditSemiBloccato or isRiedizione or hasRiedizioni) and (attivita.isPausa() or attivita.isValutazioneApprendimento() or attivita.isRegistrazionePartecipanti()))}" onclick="event.cancelBubble=true;modificaAttivitaFrom('attivitaRES',this);" class="btn btn-warning btn-table single" th:text="#{label.modifica}">
+											<a th:unless="${isEventoIniziato or ((isEditSemiBloccato or isRiedizione or hasRiedizioni) and (attivita.isPausa() or attivita.isValutazioneApprendimento() or attivita.isRegistrazionePartecipanti() or attivita.isSalutiIntroduttivi()))}" onclick="event.cancelBubble=true;modificaAttivitaFrom('attivitaRES',this);" class="btn btn-warning btn-table single" th:text="#{label.modifica}">
 												<span><i class="fa fa-pencil"></i></span>
 											</a>
-											<a th:if="${isEventoIniziato or ((isEditSemiBloccato or isRiedizione or hasRiedizioni) and (attivita.isPausa() or attivita.isValutazioneApprendimento() or attivita.isRegistrazionePartecipanti()))}" class="btn btn-warning btn-table single disabled" th:text="#{label.modifica}">
+											<a th:if="${isEventoIniziato or ((isEditSemiBloccato or isRiedizione or hasRiedizioni) and (attivita.isPausa() or attivita.isValutazioneApprendimento() or attivita.isRegistrazionePartecipanti() or attivita.isSalutiIntroduttivi()))}" class="btn btn-warning btn-table single disabled" th:text="#{label.modifica}">
 												<span><i class="fa fa-pencil"></i></span>
 											</a>
 											<a th:unless="${isRiedizione or isEditSemiBloccato or hasRiedizioni}" onclick="event.cancelBubble=true;removeAttivitaFrom('attivitaRES',this)" class="btn btn-danger btn-table single" th:text="#{label.elimina}">
