--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -801,7 +801,7 @@
 											</label>
 
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="numeroPartecipanti">
-												<input type="number" pattern="numeric" class="form-control optional" th:field="${eventoWrapper.evento.numeroPartecipanti}" th:disabled="${isRiedizione or isEditSemiBloccato}"/>
+												<input type="number" min="0" oninput="validity.valid||(value='0');" step="any" pattern="numeric" class="form-control optional" th:field="${eventoWrapper.evento.numeroPartecipanti}" th:disabled="${isRiedizione or isEditSemiBloccato}"/>
 											</div>
 											<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.numeroPartecipanti')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.numeroPartecipanti')}__}"></div>
 										</div>
@@ -1089,7 +1089,7 @@
 												<span class="required">*</span>
 											</label>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="creditiFormativi">
-												<input type="number" class="form-control crediti-proposti" th:field="${eventoWrapper.evento.crediti}" th:disabled="${isRiedizione or isEditSemiBloccato}" th:attr="data-editabile=${!isRiedizione and !isEditSemiBloccato}" />
+												<input type="number" min="0" oninput="validity.valid||(value='0');" step="any" class="form-control crediti-proposti" th:field="${eventoWrapper.evento.crediti}" th:disabled="${isRiedizione or isEditSemiBloccato}" th:attr="data-editabile=${!isRiedizione and !isEditSemiBloccato}" />
 											</div>
 											<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.crediti')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.crediti')}__}"></div>
 										</div>
@@ -1136,7 +1136,7 @@
 												<span class="required">*</span>
 											</label>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-11" id="quota">
-												<input th:disabled="${isRiedizione or isEditSemiBloccato}" type="number" class="form-control optional" th:field="${eventoWrapper.evento.quotaPartecipazione}" />
+												<input th:disabled="${isRiedizione or isEditSemiBloccato}" type="number" min="0" oninput="validity.valid||(value='0');" step="any" class="form-control optional" th:field="${eventoWrapper.evento.quotaPartecipazione}" />
 											</div>
 											<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.quotaPartecipazione')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.quotaPartecipazione')}__}"></div>
 										</div>
