--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -845,7 +845,7 @@
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12"></div>
 									<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.coordinatori')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.coordinatori')}__}"></div>
-									<div class="alert" th:text="#{message.coordinatori_massiomo_3}"></div>
+									<div class="alert" th:text="#{message.coordinatori_massimo_3_no_docenza_no_crediti}"></div>
 									<div class="item form-group" style="clear:both; padding:2px;"></div>
 									<div class="item form-group" style="clear:both">
 										<div id="coordinatoriContainer" class="col-xs-offset-1 col-xs-10">
@@ -1913,8 +1913,9 @@
 							for(var item = 0; item < data.length; item++){
 								$.each($(selectId + " option"), function() {
 									//console.log($(this).attr("value"));
-									//se evento versione 2 non ablito gli esperti
-									if(versione === 1 || ($(this).attr("value") != 'ESPERTO_A' && $(this).attr("value") != 'ESPERTO_B' && $(this).attr("value") != 'ESPERTO_C')) {
+									//se evento versione 2 non ablito gli esperti e neppure i coordinatori
+									if(versione === 1 || ($(this).attr("value") != 'ESPERTO_A' && $(this).attr("value") != 'ESPERTO_B' && $(this).attr("value") != 'ESPERTO_C'
+										 && $(this).attr("value") != 'COORDINATORE' && $(this).attr("value") != 'COORDINATORE_GRUPPI' && $(this).attr("value") != 'COORDINATORE_ATTIVITA_RICERCA' && $(this).attr("value") != 'COORDINATORE_ATTIVITA_AUDIT' )) {
 										if($(this).attr("value") == data[item])
 											$(this).show();
 									}
